<resources>
    <string name="app_name" translatable="false">CamSeeCamXa</string>
    <string name="camera">Camera</string>
    <string name="addCamera">Add Camera</string>
    <string name="addCameraText1">No camera found</string>
    <string name="addCameraText2">Tap on the top right icon to add camera</string>
    <string name="deleteCamera">Delete Camera</string>
    <string name="sensitivity">Sensitivity:</string>
    <string name="addSnapshot">Add Snapshot</string>
    <string name="Snapshots">Snapshots</string>
    <string name="savedToDir">"Snapshot saved to "</string>
    <string name="granted_notice">Permission Granted for the app!</string>
    <string name="ask_permission_text">Please allow me to read/write SAFE files to your external storage.</string>
    <string name="ask_permission_title">Permission Required!</string>
    <string name="OK_text" translatable="false">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="check_Internet">Please check the Internet connection!</string>
    <string name="snapFailed">"Failed to save snapshot: "</string>
    <string name="frameNo">No frame available to capture</string>
    <string name="antiEmpty">All fields must be filled</string>
    <string name="camNameExist">A camera with this name already exists</string>
    <string name="camPortIPExist">A camera with this address already exists</string>
    <string name="camAdded">Camera added successfully</string>
    <string name="deleteCamConfirm">Are you sure you want to delete this camera?</string>
    <string name="modifyCamera">Modify Camera</string>
    <string name="videoQuality">"Video Quality: "</string>
    <string name="motionDetection">"Motion Detection: "</string>
    <string name="nightVision">"Night Vision: "</string>
    <string name="vol">"Volume: "</string>
    <string name="cameraName">Camera Name</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">Yes</string>
    <string name="notFound">not found</string>
    <string name="changeCamInfo">"Changed information to camera "</string>
    <string name="deleted">deleted</string>
    <string name="events">Events</string>
    <string name="languages">"Languages: "</string>
    <string name="app_language_summary">Select the app language</string>
    <string name="about">About</string>
    <string name="language_settings">Language Settings</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="audio_volume">Audio Volume</string>
    <string name="audio_volume_summary">Adjust the audio volume</string>
    <string name="night_vision">Night Vision</string>
    <string name="night_vision_summary">Enable or disable night vision</string>
    <string name="general_settings">General Settings</string>
    <string name="motion_detection_summary">Enable or disable motion detection</string>
    <string name="languages2">Languages</string>
    <string name="video_quality">Video Quality</string>
    <string name="video_quality_summary">Select the video quality</string>
    <string name="about_summary">Informations about us</string>
    <string name="invalidLink">The address is invalid. Check again!</string>
    <string name="unreachableLink">This link is unreachable! Check again!</string>
    <string name="login_pref">Login</string>
    <string name="logged_as">Logged as:</string>
    <string name="account">Account</string>
    <string name="need_help">Need help?</string>
    <string name="reset_pwd_title">Reset password by E-mail</string>
    <string name="notLoggedIn">Not logged in yet</string>
    <string name="pref_login_summary">Using your E-mail or Google Account</string>
    <string name="logout_pref">Logout</string>
    <string name="pref_logout_summary">Click to log out</string>
    <string name="email_null">The E-mail address must not empty</string>
    <string name="pwd_null">The Password must not be empty</string>
    <string name="pwd_char_miss">The password needs to be at least 6 characters</string>
    <string name="pwd_not_match">The passwords are not matched</string>
    <string name="email_verify_sent">"Verification e-mail sent to: "</string>
    <string name="email_verify_sent_failed">Failed to send verification e-mail</string>
    <string name="reg_failed">Registration failed! Please try again later</string>
    <string name="email_not_valid">Enter valid E-mail address!</string>
    <string name="login_success">Login successfully!</string>
    <string name="user_not_yet_verify">You need to verify the account first. Please check the inbox/spam</string>
    <string name="login_failed">Login failed!</string>
    <string name="google_sign_in_failed">"Google Sign-In failed: "</string>
    <string name="google_sign_in_success">Google Sign-In successful!</string>
    <string name="email_hint">E-mail Address</string>
    <string name="pwd_hint">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="reg_btn">REGISTER NEW ACCOUNT</string>
    <string name="forgot_pwd_txt">Forgot password?</string>
    <string name="google_txtview">or sign in with</string>
    <string name="register_title">Register</string>
    <string name="pwd_re_hint">Re-enter Password</string>
    <string name="email_reset_pwd">Send Reset Password e-mail</string>
    <string name="no_change">No changes were made.</string>
    <string name="capture_failed">Failed to capture bitmap</string>
    <string name="database_error">Database Access Error!</string>
    <string name="upload_success">Snapshot saved to the Cloud!</string>
    <string name="upload_failed">Snapshot failed to save to the Cloud!</string>
    <string name="change_pwd">Change Password</string>
    <string name="delete_acc">Delete Account</string>
    <string name="registered_since">Registered since</string>
    <string name="current_pwd">Enter current password</string>
    <string name="new_pwd">Enter new password</string>
    <string name="confirm">Confirm</string>
    <string name="pwd_not_correct">The password you entered is not correct.</string>
    <string name="pwd_updated">Password updated successfully!</string>
    <string name="guide_trigger">Open Guide Screen</string>
    <string name="guide_summary">Feel lost? Open the Guide screen again!</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="play_again_desc">You can always rewatch this screen in the Settings tab.</string>
    <string name="play_again">Play Again</string>
    <string name="welcome_config">Welcome to CamSeeCamXa!\n\nIs this the first time you have installed this app on this device?\n\nWe\'ll walk you through some configurations.\n\nPress NEXT to continue the next step!</string>
    <string name="copyright_text" translatable="false">© BI12 - ICT - Team 7</string>
    <string name="name_hint">Full Name</string>
    <string name="name_null">The user must have a name!</string>
    <string name="avatar_description">Avatar of user</string>
    <string name="profile_title">User Profile</string>
    <string name="full_name">"Full Name: "</string>
    <string name="not_available">Not Available</string>
    <string name="current_empty">Current password field must not be empty!</string>
    <string name="new_pwd_empty">New password field must not be empty!</string>
    <string name="new_old_same">New password cannot match with old password!</string>
    <string name="modifyName">Change User Full Name</string>
    <string name="userName">User Full Name</string>
    <string name="info_changed">Personal information updated!</string>
    <string name="invalidTime">Please set an event before current time</string>
    <string name="cloudSnapBrowse">Browse Cloud Snapshots</string>
    <string name="guide_per">Please allow the following permissions for the best experience:\n\n- Internet\n- Read/Write to External Drive\n\nThe app is still in development stage,\nso you may catch some bugs.\nKindly report it for us by using \'Bug Report\'\nin the Settings tab.</string>
    <string name="guide_names">DMVM Developer Team:\n\n\nLeader: Nguyen Quang Minh\n\nResearch: Dang Vu Minh - Nguyen Nhat Minh\n\nDesign: Nguyen Vu Bach - Ngo The Long\n\nTest \'n Recommend: Trinh Tien Minh\n\nCode: DMVM Coders\n\n\nFor more information, please contact:\nmain@quangminh.name.vn</string>
    <string name="bug_report">Bug Report</string>
    <string name="bug_hint">Experienced bug? Report for us!</string>
</resources>