<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/account"
        android:key="account_settings">

        <Preference
            android:key="pref_login"
            android:title="@string/login_pref"
            android:summary="@string/pref_login_summary" />

        <Preference
            android:key="pref_logout"
            android:title="@string/logout_pref"
            android:summary="@string/pref_logout_summary" />

        <Preference
            android:key="pref_logged"
            android:title="@string/logged_as"
            android:summary="@string/notLoggedIn" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/language_settings"
        android:key="language_settings">

        <!-- List preference for app language -->
        <ListPreference
            android:key="pref_app_language"
            android:title="@string/languages2"
            android:summary="@string/app_language_summary"
            android:entries="@array/languages"
            android:entryValues="@array/language_values"
            android:defaultValue="en" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about"
        android:key="about_section">

        <!-- Clickable Preference for About -->
        <Preference
            android:key="pref_about"
            android:title="@string/about"
            android:summary="@string/about_summary" />
    </PreferenceCategory>

</PreferenceScreen>